# flake-aquadiva

./: README.md  flake.nix
RNAnue/: default.nix
SeqAn3/: default.nix
kraken2/: default.nix  prepdb.nix
mummer/: default.nix
ont-bonito/: default.nix  pyproject.toml
sdsl-lite/: CMakeLists.txt  default.nix
segemehl/: default.nix
viennarna/: default.nix
