[tool.poetry]
name = "ont-bonito"
version = "0.3.5"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
toml = "0.10.0"
mappy = "2.17"
tqdm = "4.31.1"
numpy = "<=1.18.5"
torch = ">=1.1.0,<=1.5"
optuna = "1.1.0"
parasail = "1.2"
seqdist = "0.0.3"
pandas = ">=0.24.2"
requests = "2.22.0"
crf-beam = "0.0.1a0"
ont-fast5-api = "3.1.6"
fast-ctc-decode = "0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
